# epoll_serv_client

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: epoll_client.hpp
client/src/: main_client.cpp
include/: socket_header.hpp
server/: CMakeLists.txt
server/include/: epoll_server.hpp
server/src/: main_server.cpp
